--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@ body {
     background-repeat: no-repeat;
 }
 
-.cabeçalho {
+.cabeçalho {            
     width: 100%;
     height: 150px;
     background: linear-gradient(to bottom, rgba(0, 0, 255, 0) 0%, rgba(0, 0, 255, 0) 50%,#141b38 51%, #141b38 100%);
@@ -32,7 +32,7 @@ body {
 }
 
 .mediasocial ul li  {
-    margin-top: 50px;
+    margin-top: 60px;
     float: right;   
     display: inline-block;
     margin-right: 10px;
@@ -50,14 +50,15 @@ body {
     object-fit:cover; 
 }
 
+.seletor {
+    display: inline-block;
+}
+
 .footer p {
     text-align: center;
 }
-/*
-.seletor {
-    position: ;
-    width: 50%;
-    height: 50%;
-    object-fit:cover; 
-    float:left;
+
+/* img {
+    max-width: 100%;
+    height:auto;
 } */
